Fixed some spacing issues

--- a/style.css
+++ b/style.css
@@ -53,3 +53,7 @@
 .col-3 {
     border: 1px solid palevioletred;
 }
+
+.small-input {
+    width: 50px;
+}
